# osclib

./: CMakeLists.txt  CMakePresets.json  main.c
src/: main.c  osc_data.h  structs_osc.h  utils_general.h  utils_math.h
src/_trash/: backup.c  old_main.c
tests/: tests.c
